--- a/web/src/app/admin/schedules/schedules-update/schedules-update.page.html
+++ b/web/src/app/admin/schedules/schedules-update/schedules-update.page.html
@@ -16,7 +16,7 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">Start Date</ion-label>
-              <ion-datetime formControlName="startDate" display-format="MMM DD, YYYY"></ion-datetime>
+              <ion-datetime formControlName="startDate" display-format="MMM DD, YYYY" [max]="maxYear"></ion-datetime>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -24,7 +24,7 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">End Date</ion-label>
-              <ion-datetime formControlName="endDate" display-format="MMM DD, YYYY"></ion-datetime>
+              <ion-datetime formControlName="endDate" display-format="MMM DD, YYYY" [max]="maxYear"></ion-datetime>
             </ion-item>
           </ion-col>
         </ion-row>
