--- a/web/src/app/admin/schedules/schedules-view/schedules-view.page.html
+++ b/web/src/app/admin/schedules/schedules-view/schedules-view.page.html
@@ -31,6 +31,21 @@
       </ion-col>
     </ion-row>
     <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Status</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label *ngIf="schedule.isActive">
+          Active
+        </ion-label>
+        <ion-label *ngIf="!schedule.isActive">
+          Inactive
+        </ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
       <ion-col text-right>
         <ion-button (click)="updateSchedule()">
           Edit Information
