--- a/web/src/app/field-admin/grades-management/update-grade/update-grade.page.html
+++ b/web/src/app/field-admin/grades-management/update-grade/update-grade.page.html
@@ -24,7 +24,7 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">Remarks</ion-label>
-              <ion-textarea formControlName="remarks" type="number"></ion-textarea>
+              <ion-textarea formControlName="remarks"></ion-textarea>
             </ion-item>
           </ion-col>
         </ion-row>
