--- a/web/src/app/login/login.page.html
+++ b/web/src/app/login/login.page.html
@@ -8,7 +8,7 @@
       </ion-row>
       <ion-row align-items-center>
         <ion-col size="4" offset="4" text-center>
-          <h2 class="m-t-0">Track Me</h2>
+          <h2 class="m-t-0">UST Med Clerkship Tracker</h2>
         </ion-col>
       </ion-row>
       <ion-row align-items-center class="h-100">
