--- a/web/src/global.scss
+++ b/web/src/global.scss
@@ -52,12 +52,20 @@
     margin-top: 20px;
 }
 
+.p-b-15 {
+    padding-bottom: 15px;
+}
+
 .p-25 {
     padding: 25px;
 }
 
 .p-t-10 {
     padding-top: 10px;
+}
+
+.p-t-15 {
+    padding-top: 15px;
 }
 
 .p-t-b-10 {
