--- a/web/src/app/admin/student-change-schedule-requests/student-change-schedule-requests.page.html
+++ b/web/src/app/admin/student-change-schedule-requests/student-change-schedule-requests.page.html
@@ -1,9 +1,36 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>student-change-schedule-requests</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <ion-grid fixed class="p-25">
+    <ion-row class="border-bottom">
+      <ion-col size="3">
+        <b>Name</b>
+      </ion-col>
+      <ion-col size="3">
+        <b>Email</b>
+      </ion-col>
+      <ion-col size="3">
+        <b>Student Number</b>
+      </ion-col>
+      <ion-col size="3">
+        <b>Group</b>
+      </ion-col>
+    </ion-row>
+    <ion-row 
+      class="border-bottom log p-t-b-10" 
+      align-items-center *ngFor="let request of requests"
+      (click)="updateRequest(request)">
+      <ion-col size="3">
+        {{ request.student.firstName + ' ' + request.student.middleName + ' ' + request.student.lastName }}
+      </ion-col>
+      <ion-col size="3">
+        {{ request.student.email }}
+      </ion-col>
+      <ion-col size="3">
+        {{ request.student.studentId }}
+      </ion-col>
+      <ion-col size="3">
+        {{ request.student.group.name }}
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+  
