--- a/web/src/app/student/change-schedule-requests/change-schedule-requests-view/change-schedule-requests-view.page.html
+++ b/web/src/app/student/change-schedule-requests/change-schedule-requests-view/change-schedule-requests-view.page.html
@@ -1,9 +1,81 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>change-schedule-requests-view</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <ion-grid padding fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Schedule Request Information</h3>
+      </ion-col>
+      <ion-col text-right>
+        <ion-button fill="clear" color="dark" (click)="dismiss()">
+          <ion-icon name="close"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Field</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>
+          {{ request.field.name }}
+        </ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Current Schedule</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>
+          {{ (request.oldRotation.schedule.startDate | date: 'MMM dd, yyyy') }} - {{ (request.oldRotation.schedule.endDate | date: 'MMM dd, yyyy') }} / {{ request.oldRotation.group.name }}
+        </ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Proposed Schedule</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>
+          {{ (request.newRotation.schedule.startDate | date: 'MMM dd, yyyy') }} - {{ (request.newRotation.schedule.endDate | date: 'MMM dd, yyyy') }} / {{ request.newRotation.group.name }}
+        </ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Status</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label *ngIf="!request.isPending && request.isApproved">
+          Approved
+        </ion-label>
+        <ion-label *ngIf="!request.isPending && !request.isApproved">
+          Declined
+        </ion-label>
+        <ion-label *ngIf="request.isPending">
+          Pending
+        </ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Remarks</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>
+          {{ request.remarks ? request.remarks : ' -- ' }}
+        </ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+  
