--- a/web/src/app/student/change-schedule-requests/change-schedule-requests.page.html
+++ b/web/src/app/student/change-schedule-requests/change-schedule-requests.page.html
@@ -26,8 +26,7 @@
       align-items-center *ngFor="let request of requests"
       (click)="viewRequest(request)">
       <ion-col size="2">
-        <!-- {{ }} -->
-        - Field Name -
+        {{ request.field.name }}
       </ion-col>
       <ion-col size="4">
         {{ (request.oldRotation.schedule.startDate | date: 'MMM dd, yyyy') }} - {{ (request.oldRotation.schedule.endDate | date: 'MMM dd, yyyy') }} / {{ request.oldRotation.group.name }}
