--- a/web/src/app/student/student.page.html
+++ b/web/src/app/student/student.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
     <img class="logo" src="./../../../../../assets/images/logo.png">
     </ion-buttons>
-    <ion-title>Track Me</ion-title>
+    <ion-title>UST Med Clerkship Tracker</ion-title>
     <ion-buttons slot="end">
       <ion-button title="Profile" (click)="viewProfile()">
         <ion-icon name="contact"></ion-icon>
