--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -45,6 +45,9 @@
             <ion-item a [routerLink]="['/admin/change-schedule-requests']">
               <ion-label>Change Schedule Requests</ion-label>
             </ion-item>
+            <ion-item a [routerLink]="['/admin/grades']">
+              <ion-label>Grades Management</ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
