--- a/web/src/app/student/change-schedule-requests/change-schedule-requests.page.html
+++ b/web/src/app/student/change-schedule-requests/change-schedule-requests.page.html
@@ -26,13 +26,13 @@
       align-items-center *ngFor="let request of requests"
       (click)="viewRequest(request)">
       <ion-col size="2">
-        {{ request.field.name }}
+        <!-- {{ request.field.name }} -->
       </ion-col>
       <ion-col size="4">
-        {{ (request.oldRotation.schedule.startDate | date: 'MMM dd, yyyy') }} - {{ (request.oldRotation.schedule.endDate | date: 'MMM dd, yyyy') }} / {{ request.oldRotation.group.name }}
+        <!-- {{ (request.oldRotation.schedule.startDate | date: 'MMM dd, yyyy') }} - {{ (request.oldRotation.schedule.endDate | date: 'MMM dd, yyyy') }} / {{ request.oldRotation.group.name }} -->
       </ion-col>
       <ion-col size="4">
-        {{ (request.newRotation.schedule.startDate | date: 'MMM dd, yyyy') }} - {{ (request.newRotation.schedule.endDate | date: 'MMM dd, yyyy') }} / {{ request.newRotation.group.name }}
+        <!-- {{ (request.newRotation.schedule.startDate | date: 'MMM dd, yyyy') }} - {{ (request.newRotation.schedule.endDate | date: 'MMM dd, yyyy') }} / {{ request.newRotation.group.name }} -->
       </ion-col>
       <ion-col size="2" *ngIf="!request.isPending && request.isApproved">
         Approved
