--- a/web/src/app/student/change-schedule-requests/change-schedule-requests-view/change-schedule-requests-view.page.html
+++ b/web/src/app/student/change-schedule-requests/change-schedule-requests-view/change-schedule-requests-view.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-grid padding fixed>
+  <ion-grid fixed class="p-25">
     <ion-row>
       <ion-col>
         <h3>Schedule Request Information</h3>
@@ -10,70 +10,92 @@
         </ion-button>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col size="4">
-        <ion-label>
-          <b>Field</b>
-        </ion-label>
+    <ion-row class="border-bottom">
+      <ion-col size="3">
+        <b>Field</b>
       </ion-col>
-      <ion-col size="8">
-        <ion-label>
-          {{ request.field.name }}
-        </ion-label>
+      <ion-col size="3">
+        <b>Start Date</b>
       </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4">
-        <ion-label>
-          <b>Current Schedule</b>
-        </ion-label>
+      <ion-col size="3">
+        <b>End Date</b>
       </ion-col>
-      <ion-col size="8">
-        <ion-label>
-          {{ (request.oldRotation.schedule.startDate | date: 'MMM dd, yyyy') }} - {{ (request.oldRotation.schedule.endDate | date: 'MMM dd, yyyy') }} / {{ request.oldRotation.group.name }}
-        </ion-label>
+      <ion-col size="3">
+        <b>Group</b>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col size="4">
-        <ion-label>
-          <b>Proposed Schedule</b>
-        </ion-label>
-      </ion-col>
-      <ion-col size="8">
-        <ion-label>
-          {{ (request.newRotation.schedule.startDate | date: 'MMM dd, yyyy') }} - {{ (request.newRotation.schedule.endDate | date: 'MMM dd, yyyy') }} / {{ request.newRotation.group.name }}
-        </ion-label>
+    <ion-row class="border-bottom p-t-b-10">
+      <ion-col>
+        <b>Current Schedule</b>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col size="4">
-        <ion-label>
-          <b>Status</b>
-        </ion-label>
+    <ion-row class="border-bottom p-t-b-10" *ngFor="let assignment of request.oldAssignments">
+      <ion-col size="3">
+        {{ assignment.field.name }}
       </ion-col>
-      <ion-col size="8">
-        <ion-label *ngIf="!request.isPending && request.isApproved">
-          Approved
-        </ion-label>
-        <ion-label *ngIf="!request.isPending && !request.isApproved">
-          Declined
-        </ion-label>
-        <ion-label *ngIf="request.isPending">
-          Pending
-        </ion-label>
+      <ion-col size="3">
+        {{ assignment.rotation.schedule.startDate | date: 'MMM dd, yyyy' }}
+      </ion-col>
+      <ion-col size="3">
+        {{ assignment.rotation.schedule.endDate | date: 'MMM dd, yyyy' }}
+      </ion-col>
+      <ion-col size="3">
+        {{ assignment.group.name }}
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col size="4">
+    <ion-row class="border-bottom p-t-b-10">
+      <ion-col>
+        <b>Proposed Schedule</b>
+      </ion-col>
+    </ion-row>
+    <ion-row class="border-bottom p-t-b-10" *ngFor="let assignment of request.newAssignments">
+      <ion-col size="3">
+        {{ assignment.field.name }}
+      </ion-col>
+      <ion-col size="3">
+        {{ assignment.rotation.schedule.startDate | date: 'MMM dd, yyyy' }}
+      </ion-col>
+      <ion-col size="3">
+        {{ assignment.rotation.schedule.endDate | date: 'MMM dd, yyyy' }}
+      </ion-col>
+      <ion-col size="3">
+        {{ assignment.group.name }}
+      </ion-col>
+    </ion-row>
+    <ion-row class="p-t-15">
+      <ion-col size="2">
         <ion-label>
-          <b>Remarks</b>
+          <b>Message:</b>
         </ion-label>
       </ion-col>
-      <ion-col size="8">
+      <ion-col size="10">
+        <ion-label>{{ request.message }}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row class="p-t-15">
+      <ion-col size="2">
         <ion-label>
-          {{ request.remarks ? request.remarks : ' -- ' }}
+          <b>Status:</b>
         </ion-label>
+      </ion-col>
+      <ion-col size="10" *ngIf="!request.isPending && request.isApproved">
+        Approved
+      </ion-col>
+      <ion-col size="10" *ngIf="!request.isPending && !request.isApproved">
+        Declined
+      </ion-col>
+      <ion-col size="10" *ngIf="request.isPending">
+        Pending
+      </ion-col>
+    </ion-row>
+    <ion-row class="p-t-15">
+      <ion-col size="2">
+        <ion-label>
+          <b>Remarks:</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="10">
+        <ion-label>{{ request.remarks ? request.remarks : ' -- ' }}</ion-label>
       </ion-col>
     </ion-row>
   </ion-grid>
