--- a/web/src/app/student/student.page.html
+++ b/web/src/app/student/student.page.html
@@ -24,6 +24,9 @@
             <ion-item a [routerLink]="['/student/rotations']">
               <ion-label>Rotations</ion-label>
             </ion-item>
+            <ion-item a [routerLink]="['/student/change-elective-requests']">
+              <ion-label>Change Elective Requests</ion-label>
+            </ion-item>
             <ion-item a [routerLink]="['/student/change-schedule-requests']">
               <ion-label>Change Schedule Requests</ion-label>
             </ion-item>
