--- a/web/src/app/student/change-elective-requests/create-change-elective-request/create-change-elective-request.page.html
+++ b/web/src/app/student/change-elective-requests/create-change-elective-request/create-change-elective-request.page.html
@@ -1,9 +1,57 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>create-change-elective-request</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content padding>
+  <ion-grid fixed>
+    <form [formGroup]="requestForm">
+      <ion-list>
+        <ion-row>
+          <ion-col>
+            <h3>Add new change elective request</h3>
+          </ion-col>
+          <ion-col text-right>
+            <ion-button fill="clear" color="dark" (click)="dismiss()">
+              <ion-icon name="close"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">Elective</ion-label>
+              <ion-select 
+                interface="popover" 
+                placeholder="Select Elective"
+                [(ngModel)]="selectedElective"
+                formControlName="elective"
+                [disabled]="electives.length === 0">
+                <ion-select-option [value]="elective" *ngFor="let elective of electives">
+                  {{ elective.field.name }}
+                </ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">Message</ion-label>
+              <ion-textarea 
+                placeholder="Enter message"
+                [(ngModel)]="message"
+                formControlName="message"></ion-textarea>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col text-right>
+            <ion-button color="light" (click)="dismiss()">
+              <ion-label>Cancel</ion-label>
+            </ion-button>
+            <ion-button [disabled]="requestForm.invalid || callInProgress" (click)="createRequest()">
+              <ion-label>Save</ion-label>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-list>
+    </form>
+  </ion-grid>
 </ion-content>
+  
