--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -42,6 +42,9 @@
             <ion-item a [routerLink]="['/admin/rotations']">
               <ion-label>Rotations</ion-label>
             </ion-item>
+            <ion-item a [routerLink]="['/admin/change-elective-requests']">
+              <ion-label>Change Elective Requests</ion-label>
+            </ion-item>
             <ion-item a [routerLink]="['/admin/change-schedule-requests']">
               <ion-label>Change Schedule Requests</ion-label>
             </ion-item>
