--- a/web/src/app/admin/admin-grades-management/admin-grades-management.page.html
+++ b/web/src/app/admin/admin-grades-management/admin-grades-management.page.html
@@ -1,20 +1,17 @@
 <ion-content>
   <ion-grid fixed class="p-25">
     <ion-row class="border-bottom">
-      <ion-col size="2">
-        <b>Field</b>
+      <ion-col size="3">
+        <b>Name</b>
       </ion-col>
-      <ion-col size="2">
-        <b>Student Name</b>
+      <ion-col size="3">
+        <b>Email</b>
       </ion-col>
       <ion-col size="2">
         <b>Student ID</b>
       </ion-col>
-      <ion-col size="1">
+      <ion-col size="2">
         <b>Group</b>
-      </ion-col>
-      <ion-col size="3">
-        <b>Schedule</b>
       </ion-col>
       <ion-col size="2">
         <b>Status</b>
@@ -24,20 +21,17 @@
       class="border-bottom log p-t-b-10" 
       align-items-center *ngFor="let assignment of assignments"
       (click)="viewAssignment(assignment)">
-      <ion-col size="2">
-        {{ assignment.field.name }}
+      <ion-col size="3">
+        {{ assignment.student.firstName + ' ' + assignment.student.middleName + assignment.student.lastName }}
       </ion-col>
-      <ion-col size="2">
-        {{ assignment.student.firstName + ' ' + assignment.student.lastName }}
+      <ion-col size="3">
+        {{ assignment.student.email }}
       </ion-col>
       <ion-col size="2">
         {{ assignment.student.studentId }}
       </ion-col>
-      <ion-col size="1">
+      <ion-col size="2">
         {{ assignment.group.name }}
-      </ion-col>
-      <ion-col size="3">
-        {{ (assignment.rotation.schedule.startDate | date: 'MMM dd, yyyy') + ' - ' + (assignment.rotation.schedule.endDate | date: 'MMM dd, yyyy') }}
       </ion-col>
       <ion-col size="2" *ngIf="assignment.isActive && assignment.isCompleted">
         Completed
