--- a/web/src/app/admin/admin-grades-management/admin-view-assignment/admin-view-assignment.page.html
+++ b/web/src/app/admin/admin-grades-management/admin-view-assignment/admin-view-assignment.page.html
@@ -30,7 +30,7 @@
         <ion-label>{{ assignment.student.studentId }}</ion-label>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row *ngIf="!assignment.message">
       <ion-col size="4">
         <ion-label>
           <b>Field Name</b>
@@ -38,6 +38,16 @@
       </ion-col>
       <ion-col size="8">
         <ion-label>{{ assignment.field.name }}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="assignment.message">
+      <ion-col size="4">
+        <ion-label>
+          <b>Message</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>{{ assignment.message }}</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
