--- a/web/src/app/admin/student-change-elective-request/update-student-change-elective-request/update-student-change-elective-request.page.html
+++ b/web/src/app/admin/student-change-elective-request/update-student-change-elective-request/update-student-change-elective-request.page.html
@@ -1,9 +1,67 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>update-student-change-elective-request</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
-</ion-content>
+    <ion-grid fixed class="p-25">
+      <ion-row>
+        <ion-col>
+          <h3>Elective Request Information</h3>
+        </ion-col>
+        <ion-col text-right>
+          <ion-button fill="clear" color="dark" (click)="dismiss()">
+            <ion-icon name="close"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row class="border-bottom">
+        <ion-col size="3">
+          <b>Name</b>
+        </ion-col>
+        <ion-col size="3">
+          <b>Email</b>
+        </ion-col>
+        <ion-col size="3">
+          <b>Student Number</b>
+        </ion-col>
+        <ion-col size="3">
+          <b>Group</b>
+        </ion-col>
+      </ion-row>
+      <ion-row class="border-bottom p-t-b-10">
+        <ion-col size="3">
+          {{ request.student.firstName + ' ' + request.student.middleName + request.student.lastName }}
+        </ion-col>
+        <ion-col size="3">
+          {{ request.student.email }}
+        </ion-col>
+        <ion-col size="3">
+          {{ request.student.studentId }}
+        </ion-col>
+        <ion-col size="3">
+          {{ request.student.group.name }}
+        </ion-col>
+      </ion-row>
+      <ion-row class="p-t-15 p-b-15">
+        <ion-col size="4">
+          <ion-label>
+            <b>Student Message</b>
+          </ion-label>
+        </ion-col>
+        <ion-col size="8">
+          <ion-label>{{ request.message }}</ion-label>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="request.isPending">
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Acknowledgement Message</ion-label>
+            <ion-textarea [(ngModel)]="remarks"></ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col text-center *ngIf="request.isPending">
+          <ion-button [disabled]="remarks === '' || callInProgess" (click)="accept()">Accept</ion-button>
+          <ion-button [disabled]="remarks === '' || callInProgess" color="danger" (click)="decline()">Decline</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+    
