--- a/web/src/app/student/change-elective-requests/create-change-elective-request/create-change-elective-request.page.html
+++ b/web/src/app/student/change-elective-requests/create-change-elective-request/create-change-elective-request.page.html
@@ -17,7 +17,7 @@
             <ion-item>
               <ion-label position="floating">Elective</ion-label>
               <ion-select 
-                interface="popover" 
+                interface="modal" 
                 placeholder="Select Elective"
                 [(ngModel)]="selectedElective"
                 formControlName="elective"
