Fixed reset password modal.

--- a/web/src/app/login/login.page.html
+++ b/web/src/app/login/login.page.html
@@ -41,9 +41,13 @@
                 </ion-col>
               </ion-row>
               <ion-row>
+                <ion-col>
+                  <ion-button fill="clear" size="small" (click)="openModal()">Forgot Password</ion-button>
+                </ion-col>
+              </ion-row>
+              <ion-row>
                 <ion-col text-right>
                   <ion-button (click)="login()" [disabled]="loginForm.invalid || callInProgress">Login</ion-button>
-                  <ion-button fill="clear" size="small" (click)="openModal()">Forget Password</ion-button>
                 </ion-col>
               </ion-row>
             </ion-grid>
