--- a/web/src/app/lost-password-modal/lost-password-modal.page.html
+++ b/web/src/app/lost-password-modal/lost-password-modal.page.html
@@ -1,22 +1,31 @@
 <ion-content>
-  <ion-grid>
+  <ion-grid padding>
     <form [formGroup]="form">
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">Email</ion-label>
-              <ion-input formControlName="email"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-
-        <ion-row>
-          <ion-col>
-            <ion-button (click)="resetPassword()">
-              <ion-label>Reset</ion-label>
-            </ion-button>
-          </ion-col>
-        </ion-row>
+      <ion-row>
+        <ion-col>
+          <h3>Reset Password</h3>
+        </ion-col>
+        <ion-col text-right>
+          <ion-button fill="clear" color="dark" (click)="dismiss()">
+            <ion-icon name="close"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Email</ion-label>
+            <ion-input formControlName="email"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col text-right>
+          <ion-button [disabled]="form.invalid" (click)="resetPassword()">
+            <ion-label>Reset</ion-label>
+          </ion-button>
+        </ion-col>
+      </ion-row>
     </form>
   </ion-grid>
 </ion-content>
