Added unassigned option in group assignments.

--- a/web/src/app/admin/group-assignments/group-assignments.page.html
+++ b/web/src/app/admin/group-assignments/group-assignments.page.html
@@ -76,7 +76,10 @@
                 <ion-select 
                   interface="popover"
                   (ionChange)="setGroup(student, $event)">
-                  <ion-select-option [selected]="g._id === groups[0]._id" [value]="g" *ngFor="let g of groups">
+                  <ion-select-option selected="true" value="Unassigned">
+                    Unassigned
+                  </ion-select-option>
+                  <ion-select-option [value]="g" *ngFor="let g of groups">
                     {{ g.name }}
                   </ion-select-option>
                 </ion-select>
