--- a/web/src/app/field-admin/field-admin.page.html
+++ b/web/src/app/field-admin/field-admin.page.html
@@ -8,7 +8,7 @@
       <ion-button title="Profile" (click)="viewProfile()">
         <ion-icon name="contact"></ion-icon>
       </ion-button>
-      <ion-button title="Logout" (click)="logout($event)">
+      <ion-button title="Logout" (click)="logout()">
         <ion-icon name="log-out"></ion-icon>
       </ion-button>
     </ion-buttons>
