--- a/web/src/app/admin/rotations/rotations-update/rotations-update.page.html
+++ b/web/src/app/admin/rotations/rotations-update/rotations-update.page.html
@@ -1,9 +1,12 @@
 <ion-content>
-  <ion-grid fixed class="p-25">
-    <ion-row class="m-b-15">
+  <ion-grid padding fixed>
+    <ion-row>
       <ion-col>
-        <ion-button (click)="createRotation()">
-          Add new rotation
+        <h3>Update rotation</h3>
+      </ion-col>
+      <ion-col text-right>
+        <ion-button fill="clear" color="dark" (click)="dismiss()">
+          <ion-icon name="close"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
@@ -28,9 +31,8 @@
       </ion-col>
     </ion-row>
     <ion-row 
-      class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let rotation of rotations"
-      (click)="viewRotation(rotation)">
+      class="border-bottom p-t-b-10" 
+      align-items-center>
       <ion-col size="2">
         {{ getFieldName(rotation) }}
       </ion-col>
@@ -51,6 +53,24 @@
       </ion-col>
       <ion-col size="1">
         {{ rotation.studentCount }}
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label>Active</ion-label>
+          <ion-checkbox slot="start" [(ngModel)]="isActive"></ion-checkbox>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row text-right>
+      <ion-col size="12">
+        <ion-button color="light" (click)="dismiss()">
+          <ion-label>Cancel</ion-label>
+        </ion-button>
+        <ion-button [disabled]="callInProgress" (click)="updateRotation()">
+          <ion-label>Save</ion-label>
+        </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
