--- a/web/src/app/admin/student-change-schedule-requests/student-change-schedule-request-update/student-change-schedule-request-update.page.html
+++ b/web/src/app/admin/student-change-schedule-requests/student-change-schedule-request-update/student-change-schedule-request-update.page.html
@@ -46,7 +46,7 @@
         {{ assignment.group.name }}
       </ion-col>
       <ion-col size="1">
-        --
+        {{ assignment.rotation.studentCount }}
       </ion-col>
     </ion-row>
     <ion-row class="border-bottom p-t-b-10">
@@ -68,7 +68,7 @@
         {{ assignment.group.name }}
       </ion-col>
       <ion-col size="1">
-        --
+        {{ assignment.rotation.studentCount }}
       </ion-col>
     </ion-row>
     <ion-row class="p-t-15 p-b-15">
