--- a/web/src/app/student/change-schedule-requests/change-schedule-requests.page.html
+++ b/web/src/app/student/change-schedule-requests/change-schedule-requests.page.html
@@ -2,7 +2,7 @@
   <ion-grid fixed class="p-25">
     <ion-row class="m-b-15">
       <ion-col>
-        <ion-button (click)="createRequest()" [disabled]="assignments.length === 0">
+        <ion-button (click)="createRequest()">
           Add new request
         </ion-button>
       </ion-col>
