--- a/web/src/app/student/student.page.html
+++ b/web/src/app/student/student.page.html
@@ -30,6 +30,9 @@
             <ion-item a [routerLink]="['/student/change-schedule-requests']">
               <ion-label>Change Schedule Requests</ion-label>
             </ion-item>
+            <ion-item a [routerLink]="['/student/schedules-overview']">
+              <ion-label>Schedules Overview</ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
