--- a/web/src/app/student/change-elective-requests/update-change-elective-request/update-change-elective-request.page.html
+++ b/web/src/app/student/change-elective-requests/update-change-elective-request/update-change-elective-request.page.html
@@ -42,7 +42,7 @@
               <ion-item>
                 <ion-label position="floating">Elective</ion-label>
                 <ion-select 
-                  interface="popover" 
+                  interface="modal" 
                   placeholder="Select Elective"
                   [(ngModel)]="selectedElective"
                   formControlName="elective"
