--- a/web/src/app/field-admin/grades-management/update-grade/update-grade.page.html
+++ b/web/src/app/field-admin/grades-management/update-grade/update-grade.page.html
@@ -4,7 +4,8 @@
       <ion-list>
         <ion-row>
           <ion-col>
-            <h3>Add assignment grade</h3>
+            <h3 *ngIf="!assignment.isCompleted">Add assignment grade</h3>
+            <h3 *ngIf="assignment.isCompleted">Update assignment grade</h3>
           </ion-col>
           <ion-col text-right>
             <ion-button fill="clear" color="dark" (click)="dismiss()">
