--- a/web/src/app/field-admin/grades-management/grades-management.page.html
+++ b/web/src/app/field-admin/grades-management/grades-management.page.html
@@ -28,7 +28,7 @@
         {{ assignment.field.name }}
       </ion-col>
       <ion-col size="2">
-        {{ assignment.student.firstName + ' ' + assignment.student.lastName }}
+        {{ assignment.student.firstName + ' ' + assignment.student.middleName + ' ' + assignment.student.lastName }}
       </ion-col>
       <ion-col size="2">
         {{ assignment.student.studentId }}
