--- a/web/src/app/student/student-rotations/view-student-assignment/view-student-assignment.page.html
+++ b/web/src/app/student/student-rotations/view-student-assignment/view-student-assignment.page.html
@@ -78,6 +78,16 @@
         <ion-label>{{ assignment.remarks ? assignment.remarks : ' -- ' }}</ion-label>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Reference Message</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>{{ assignment.message ? assignment.message : ' -- ' }}</ion-label>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
   
